...
    }
    val finishCd = stringResource(id = R.string.exam_finish_cd)
    Button(
      modifier = Modifier
        .weight(1f)
        .heightIn(min = minHeight)
        .testTag("btn-finish")
        .semantics { contentDescription = finishCd },
      onClick = onFinish,
    ) {
      Text(
        text = stringResource(id = R.string.finish_exam),
        maxLines = 1,
...
